[package]
name = "terra-preview"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = { workspace = true }
clap = { version = "4.1.11", features = ["derive"] }
env_logger = "0.10.0"
gilrs = "0.10.1"
indicatif = "0.17.3"
mint = { workspace = true }
open-location-code = "0.1.0"
planetcam = { path = "../planetcam" }
smaa = { version = "0.9.0", optional = true }
terra = { path = "..", default-features = false }
tokio = { version = "1.26.0", features = ["fs", "macros", "sync", "rt", "rt-multi-thread", "io-util"] }
wgpu = { workspace = true }
winit = {version = "0.28.3", default-features = false, features = ["x11", "wayland", "wayland-dlopen"] }
terra-generate = { path = "../generate", optional = true }
time = { version = "0.3.20", features = ["parsing", "macros"] }

[features]
default = []
generate = ["terra-generate"]
