[package]
name = "rshader"
version = "0.2.0"
authors = ["Jonathan Behrens <fintelia@gmail.com>"]
license = "Apache-2.0"
description = "A simply library for reloading shaders at runtime"
repository = "https://github.com/fintelia/terra"
homepage = "https://github.com/fintelia/terra"
categories = ["game-engines", "rendering"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
lazy_static = "1.4.0"
naga = { version = "0.11.0", features = ["glsl-in", "wgsl-in", "span"] }
notify = "5.1.0"
wgpu = { workspace = true }

[features]
default = []
dynamic_shaders = []
